[tool.poetry]
name = "yt_channel_backup"
version = "0.1.0"
description = ""
authors = ["Quinton Jasper"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.3.0"
pandas = "^1.4.3"
webdriver-manager = "^3.8.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
